[project]
name = "rpa-runtime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "zeebe-grpc>=8.4.0",
    "robotframework>=7.1.1",
    "quart>=0.19.8",
    "pyyaml>=6.0.2",
    "pyzeebe>=4.0.0",
    "watchdog>=6.0.0",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
